--- a/atv1-padroes-web/CSS.css
+++ b/atv1-padroes-web/CSS.css
@@ -1,13 +1,27 @@
 body{
     margin: 0;  
-    padding: 1%;
+    padding: 0;
 }
+
+footer{
+    background-color: #f0f0f0;
+
+    min-height: 100px;
+
+    padding-top: 1%;
+}
+
 h1{
     text-align: center;
 }
 
 h2{
     text-transform: uppercase;
+    padding-left: 1%;
+}
+
+h3{
+    padding-left: 1%;
 }
 
 header{
@@ -24,13 +38,31 @@ header > h1{
     justify-content: space-between;
 }
 
+html{
+    font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    line-break: auto;
+}
+
+.logo-contato{
+    max-width: 20px;
+}
+
+ol{
+    list-style-type: upper-roman;
+}
+
 p{
     margin-block: 0px;
+    padding-left: 1%;
 }
 
 section{
     border-top: solid 1px gainsboro;
     padding-block: 1%;
+}
+
+section > a{
+    padding-left: 1%;
 }
 
 .sumario{
