--- a/atv1-padroes-web/CSS.css
+++ b/atv1-padroes-web/CSS.css
@@ -3,12 +3,26 @@ body{
     padding: 0;
 }
 
+.copyleft{
+    align-self: baseline;
+}
+
 footer{
     background-color: #f0f0f0;
 
-    min-height: 100px;
+    min-height: 150px;
+
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
 
     padding-top: 1%;
+    padding-left: 1%;
+}
+
+footer > ul{
+    list-style: none;
+    padding-left: 0;
 }
 
 h1{
@@ -17,11 +31,7 @@ h1{
 
 h2{
     text-transform: uppercase;
-    padding-left: 1%;
-}
-
-h3{
-    padding-left: 1%;
+    margin: 0;
 }
 
 header{
@@ -36,6 +46,12 @@ header > h1{
 .header-elements{
     display: flex;
     justify-content: space-between;
+    align-items: end;
+}
+
+header > img{
+    position: absolute;
+    height: 3em;
 }
 
 html{
@@ -43,8 +59,10 @@ html{
     line-break: auto;
 }
 
+
 .logo-contato{
-    max-width: 20px;
+    height: 1em;
+    width: auto;
 }
 
 ol{
@@ -53,20 +71,22 @@ ol{
 
 p{
     margin-block: 0px;
+}
+
+section, nav{
     padding-left: 1%;
 }
 
-section{
+section, nav{
     border-top: solid 1px gainsboro;
     padding-block: 1%;
-}
-
-section > a{
-    padding-left: 1%;
 }
 
 .sumario{
     display:grid
 }
 
+ul{
+    margin-block: 0;
+}
 
