--- a/atv03-09/stylesheet.css
+++ b/atv03-09/stylesheet.css
@@ -1,3 +1,7 @@
+a{
+    text-decoration: none;
+}
+
 body{
     margin: 0;
     padding: 0;
@@ -7,21 +11,43 @@ body{
 
 .container-descricao{
     display: flex;
+    
+    justify-content: space-between;
+
+    margin-top: 20px;
+}
+
+.container-descricao p{
+
+
+    flex:0 0 50%;
+    max-width: 50%;
+
+    margin: 0px;
+
+    text-align: left;
+    word-wrap: break-word;
 }
 
 .container-imagem{
-    
-    display: grid;
+
+    flex: 0 0 50%;
+    display: flex;
+    flex-direction: column;
+    max-width: 50%; 
+    align-items: center;
+    text-align: center;
 }
 
 header{
     background-color: rgb(166, 169, 173);
-    height: 100px;;
+    height: 100px;
 }
 
 html{
     height: 100%;
 }
+
 
 footer{
     background-color: aliceblue;
@@ -33,5 +59,5 @@ footer{
 }
 
 main{
-    position: relative;
+    padding: 2%;
 }
