--- a/atv03-09/stylesheet.css
+++ b/atv03-09/stylesheet.css
@@ -1,12 +1,25 @@
 a{
     text-decoration: none;
+    color:#586BA4;
 }
+
+a:visited{
+    color: #004E89;
+}
+
+a:hover{
+    color: #FF6B35;
+}
+
 
 body{
     margin: 0;
     padding: 0;
 
     height: 100%;
+
+    display: flex;
+    flex-direction: column;
 }
 
 .container-descricao{
@@ -39,9 +52,33 @@ figure{
     text-align: center;
 }
 
-header{
-    background-color: rgb(166, 169, 173);
+footer{
+    background-color: #586BA4;
+
     height: 100px;
+    width: 100%;
+
+    flex-shrink: 0;
+
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-end;
+}
+
+footer p {
+    margin-block: 1px;
+    margin-inline: 5px auto;
+    align-self: center;
+    
+    color: lightgrey;
+}
+
+header{
+    background-color: #F5DD90;
+    height: 100px;
+    padding: 10px;
+
+    display: flex;
 }
 
 html{
@@ -52,15 +89,8 @@ img{
     width: 50%;
 }
 
-footer{
-    background-color: aliceblue;
-
-    height: 100px;
-    width: 100%;
-
-
-}
-
 main{
     padding: 2%;
+
+    flex: 1;
 }
