--- a/atv2-padroes-web/stylesheet.css
+++ b/atv2-padroes-web/stylesheet.css
@@ -1,28 +1,71 @@
+body{
+    margin: 0;
+    padding: 0;
+
+    height: 100%;
+
+    display: flex;
+    flex-direction: column;
+}
+
+footer{
+    background-color: #586BA4;
+
+    height: 100px;
+    width: 100%;
+
+    flex-shrink: 0;
+
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-end;
+}
+
+footer p {
+    margin-block: 1px;
+    margin-inline: 5px auto;
+    align-self: center;
+    
+    color: lightgrey;
+}
+
+header{
+    background-color: #F5DD90;
+    height: 100px;
+    padding: 10px;
+
+    display: flex;
+}
+
+.tabela-div{
+    overflow-x: auto;
+    display: flex;
+    width: 80%;
+    margin: 0 auto;
+}
+
 table{
     border-width: 1px;
     border-color: black;
     border-style: solid;
     border-collapse: collapse;
-    width:80%;
+    width: 100%;
+    margin-block: 2em;
 }
 
-th{
-    border-width: 1px;
-    border-color: black;
-    border-style: solid;
-    border-collapse: collapse;
-    background-color: #ff9292;
+table caption {
+    caption-side: bottom; /* move a legenda para baixo */
+    text-align: center;
+    font-style: italic;
+    margin-top: 10px;
 }
+
 
 td{
     border-width: 1px;
     border-color: black;
     border-style: solid;
     border-collapse: collapse;
-}
-
-tr:nth-child(even){
-    background-color: #c5c5c5;
 }
 
 td:nth-child(1), td:nth-child(4), td:nth-child(5) {
@@ -33,15 +76,14 @@ td:nth-child(2), td:nth-child(3){
     text-align: left;
 }
 
-table caption {
-    caption-side: bottom; /* move a legenda para baixo */
-    text-align: center;
-    font-style: italic;
-    margin-top: 10px;
+th{
+    border-width: 1px;
+    border-color: black;
+    border-style: solid;
+    border-collapse: collapse;
+    background-color: #ff9292;
 }
 
-.tabela-div{
-    overflow-x: auto;
+tr:nth-child(even){
+    background-color: #c5c5c5;
 }
-
-
