--- a/atv2-padroes-web/stylesheet.css
+++ b/atv2-padroes-web/stylesheet.css
@@ -1,21 +1,16 @@
 body{
     margin: 0;
     padding: 0;
-
     height: 100%;
-
     display: flex;
     flex-direction: column;
 }
 
 footer{
     background-color: #586BA4;
-
     height: 100px;
     width: 100%;
-
     flex-shrink: 0;
-
     display: flex;
     flex-direction: column;
     justify-content: flex-end;
@@ -25,7 +20,6 @@ footer p {
     margin-block: 1px;
     margin-inline: 5px auto;
     align-self: center;
-    
     color: lightgrey;
 }
 
@@ -33,7 +27,6 @@ header{
     background-color: #F5DD90;
     height: 100px;
     padding: 10px;
-
     display: flex;
 }
 
@@ -60,11 +53,8 @@ table caption {
     margin-top: 10px;
 }
 
-
 td{
-    border-width: 1px;
-    border-color: black;
-    border-style: solid;
+    border: 1px solid black;
     border-collapse: collapse;
 }
 
@@ -77,11 +67,11 @@ td:nth-child(2), td:nth-child(3){
 }
 
 th{
-    border-width: 1px;
-    border-color: black;
-    border-style: solid;
+    border: 1px solid black;
     border-collapse: collapse;
     background-color: #ff9292;
+    font-weight: bold;
+    text-align: center;
 }
 
 tr:nth-child(even){
